--- a/src/cards.css
+++ b/src/cards.css
@@ -1,6 +1,6 @@
 .card {
   /* Add shadows to create the "card" effect */
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   border-radius: 5px; /* 5px rounded corners */
   background: aliceblue;
@@ -9,7 +9,7 @@
 }
 
 .card-content {
-  padding: .5em;
+  padding: 0.5em;
 }
 
 .card-content h3 {
@@ -36,9 +36,9 @@
   text-decoration: none;
   display: inline-block;
   font-size: 14px;
-  padding: .5em;
+  padding: 0.5em;
   border-radius: 2px;
-  margin: .1em;
+  margin: 0.1em;
   width: 100%;
 }
 
